added a hover effect for the brand-item

--- a/index.html
+++ b/index.html
@@ -20,145 +20,169 @@
     <div class="brands-box" itemscope="itemscope">
       <h1 class="heading-primary mb-7per" itemprop="name">Мы продаем запчасти для <br> следующих марок автомобилей:</h1>
       <ul class="brands-box__list" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList">
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Audi</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Audi</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="1"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Ford</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Ford</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="2"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Mazda</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Mazda</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="3"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Peugeot</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Peugeot</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="4"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Subaru</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Subaru</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="5"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на BMW</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на BMW</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="6"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Kia</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Kia</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="7"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Nissan</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Nissan</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="8"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Skoda</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Skoda</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="9"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Volkswagen</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Volkswagen</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="10"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Fiat</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Fiat</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="11"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Lexus</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Lexus</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="12"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Opel</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Opel</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="13"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на SsangYong</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на SsangYong</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="14"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Volvo</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Volvo</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="15"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Masserati</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Masserati</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="16"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Audi</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Audi</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="17"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Mazda</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Mazda</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="18"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Honda</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Honda</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="19"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Mercedes</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Mercedes</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="20"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Renault</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Renault</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="21"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Suzuki</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Suzuki</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="22"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Chevrolet</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Chevrolet</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="23"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> <span itemprop="name">Запчасти на Renault</span>
+        <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
+            <p class="brand-item__paragraph" itemprop="name">Запчасти на Renault</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="24"/></a>
           <svg class="icon-box__icon">
             <use xlink:href="#arrow-right"></use>
