created & styled a brand-box btn

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       </symbol>
     </svg>
     <div class="brands-box" itemscope="itemscope">
-      <h1 class="heading-primary mb-7per" itemprop="name">Мы продаем запчасти для <br> следующих марок автомобилей:</h1>
-      <ul class="brands-box__list" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList">
+      <h1 class="heading-primary mb-69px" itemprop="name">Мы продаем запчасти для <br> следующих марок автомобилей:</h1>
+      <ul class="brands-box__list mb-56px" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList"> 
         <li class="brands-box__brand-item brand-item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brand-item__link" href="#" itemprop="item"> 
             <p class="brand-item__paragraph" itemprop="name">Запчасти на Audi</p><span itemprop="count">более 3948274 </span>
             <meta itemprop="position" content="1"/></a>
@@ -188,7 +188,7 @@
             <use xlink:href="#arrow-right"></use>
           </svg>
         </li>
-      </ul>
+      </ul><a class="brands-box__btn btn" href="#">Запчасти для других марок</a>
     </div>
   </body>
 </html>
